--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "babel-watch": "^2.0.2",
     "semistandard": "^8.0.0",
     "snazzy": "^4.0.0",
-    "tapava": "^2.2.0"
+    "tapava": "^2.2.0",
+    "then-fs": "^2.0.0",
+    "tmp": "0.0.28"
   },
   "dependencies": {
     "bluebird": "^3.4.1",
     "co": "^4.6.0",
-    "download-npm-package": "^1.0.1",
+    "download-npm-package": "^2.0.0",
     "get-ideal-package-tree": "^1.0.2",
+    "lodash.sortby": "^4.5.0",
     "mkdirp-then": "^1.2.0",
     "object.entries": "^1.0.3",
     "read-package-json": "^2.0.4"
