--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
     "immutable-object-methods": "^1.2.1",
     "mkdirp-then": "^1.2.0",
     "object.entries": "^1.0.3",
-    "read-package-json": "^2.0.4"
+    "read-json": "^1.0.3"
   }
 }
