--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm-sync": "dist/cli.js"
   },
   "scripts": {
-    "test": "babel-tape-runner test/*-test.js && semistandard | snazzy",
+    "test": "xo && babel-tape-runner test/*-test.js",
     "build": "rm -rf dist && mkdir -p dist && babel lib --out-dir dist",
     "watch": "rm -rf dist && mkdir -p dist && babel -w lib --out-dir dist",
     "prepublish": "npm run build",
@@ -30,11 +30,10 @@
     "babel-tape-runner": "^2.0.1",
     "babel-watch": "^2.0.2",
     "lodash.sortby": "^4.5.0",
-    "semistandard": "^8.0.0",
-    "snazzy": "^4.0.0",
     "tapava": "^2.2.0",
     "then-fs": "^2.0.0",
-    "tmp": "0.0.28"
+    "tmp": "0.0.28",
+    "xo": "^0.16.0"
   },
   "dependencies": {
     "bluebird": "^3.4.1",
@@ -44,9 +43,14 @@
     "get-ideal-package-tree": "^1.0.3",
     "get-package-json-from-registry": "^1.0.3",
     "immutable-object-methods": "^1.2.1",
+    "minimist": "^1.2.0",
     "mkdirp-then": "^1.2.0",
     "object.entries": "^1.0.3",
     "read-json": "^1.0.3",
     "rimraf-then": "^1.0.0"
+  },
+  "xo": {
+    "esnext": true,
+    "space": true
   }
 }
