--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "xo": "^0.16.0"
   },
   "dependencies": {
-    "bluebird": "^3.4.1",
     "co": "^4.6.0",
     "download-npm-package": "^3.1.0",
     "fs-symlink": "^1.2.1",
@@ -46,8 +45,8 @@
     "minimist": "^1.2.0",
     "mkdirp-then": "^1.2.0",
     "object.entries": "^1.0.3",
-    "read-json": "^1.0.3",
-    "rimraf-then": "^1.0.0"
+    "rimraf-then": "^1.0.0",
+    "then-read-json": "^1.0.1"
   },
   "xo": {
     "esnext": true,
