support github packages

--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
   },
   "dependencies": {
     "co": "^4.6.0",
+    "download-github-package": "^1.0.0",
     "download-npm-package": "^3.1.0",
     "fs-symlink": "^1.2.1",
-    "get-ideal-package-tree": "^1.0.3",
-    "get-package-json-from-registry": "^1.0.3",
+    "get-ideal-package-tree": "^2.0.0",
+    "get-pkg-json": "^1.0.0",
     "immutable-object-methods": "^1.2.1",
     "minimist": "^1.2.0",
     "mkdirp-then": "^1.2.0",
