--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "npm-sync": "dist/cli.js"
   },
   "scripts": {
-    "test": "xo && babel-tape-runner test/*-test.js",
+    "test": "xo && nyc babel-tape-runner test/*-test.js",
     "build": "rm -rf dist && mkdir -p dist && babel lib --out-dir dist",
     "watch": "rm -rf dist && mkdir -p dist && babel -w lib --out-dir dist",
     "prepublish": "npm run build",
-    "start": "babel-watch lib/cli.js"
+    "start": "babel-watch lib/cli.js",
+    "open-coverage": "npm run test && nyc report --reporter=lcov && open coverage/lcov-report/index.html"
   },
   "repository": {
     "type": "git",
