--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "minimist": "^1.2.0",
     "mkdirp-then": "^1.2.0",
     "object.entries": "^1.0.3",
-    "rimraf-then": "^1.0.0"
+    "rimraf-then": "^1.0.0",
+    "then-read-json": "^1.0.3"
   },
   "xo": {
     "esnext": true,
