--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "xo": "^0.16.0"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "download-github-package": "^1.0.0",
     "download-npm-package": "^3.1.0",
     "fs-symlink": "^1.2.1",
