--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "nyc": "^7.0.0",
     "promisify-function": "^1.3.2",
     "tapava": "^2.2.0",
-    "then-fs": "^2.0.0",
     "then-tmp": "^1.0.0",
     "xo": "^0.16.0"
   },
@@ -46,9 +45,11 @@
     "fs-symlink": "^1.2.1",
     "get-ideal-package-tree": "^2.0.0",
     "get-pkg-json": "^1.0.0",
+    "graceful-fs": "^4.1.4",
     "immutable-object-methods": "^1.2.1",
     "minimist": "^1.2.0",
     "mkdirp-then": "^1.2.0",
+    "mz": "^2.4.0",
     "object.entries": "^1.0.3",
     "rimraf-then": "^1.0.0",
     "then-read-json": "^1.0.3"
