--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chalk": "^1.1.3",
     "download-github-package": "^1.0.0",
     "download-npm-package": "^3.1.0",
+    "fast-cache": "^1.0.0",
     "fs-symlink": "^1.2.1",
     "get-ideal-package-tree": "^2.0.0",
     "get-pkg-json": "^1.0.0",
